--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,8 +10,9 @@ body {
 #header{
 	width: 100%;
     height: 14%;
-    background-color: #f2dbb7;
+    background-color: #b7f2ea;
     margin-top: -10px;
+    border-bottom: 1px solid black;
 }
 .header-text{
     padding-top: 2%;
@@ -74,4 +75,26 @@ table, th, tr, td{
 
 #edit-user{
     margin: 5% 0;
+}
+
+/* BUTTONS */
+
+.btn{
+  align-items: center;
+  background: #abe4f8;
+    border: solid 1px #8cc5d9;
+    box-shadow: inset 0 0 0 1px #cdeffb;
+    color: #42788e;
+    text-shadow: 0 1px 0 #b6e6f9;
+    padding:5px;
+    border-radius: 5px;
+}
+
+.btn:hover{
+    background: #80d4f5;
+    border: solid 1px #79acbe;
+    border-bottom: solid 3px #589cb6;
+    box-shadow: inset 0 0 0 1px #b2e6f8; 
+    padding:5px;
+    border-radius: 5px;
 }
